[package]
name = "neversawus-renderer"
version = "0.1.0"
authors = ["Chris Dickinson <christopher.s.dickinson@gmail.com>"]
edition = "2018"
autobins = false

[dependencies]
lambda_runtime = "^0.1"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "^0.4"
simple_logger = "^1"
aws_lambda_events = "^0.2.4"
comrak = "0.6.2"
rust-s3 = "0.13.0"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
